# llm2bert

./: README.md  pyproject.toml  settings.py
cc_prompt/: data.md  docs.md  parser.md  settings.md  sglang.md  train.md
debug/LLM_API/: README.md  api_with_cache.py  cache_db.ipynb  cache_web_server.py  check_db.py  export_csv.py  test_async_api.py  test_prompt.py  test_prompt_csv.py
debug/bert_finetune/: test_dataset_model.ipynb
docs/: async_api.md  sglang_infer.md
examples/binary classification/: 1_async_api.py  1_sglang_infer.py  2_export_csv.py  llm_pred_split2test.py  predict.py  settings.py  train.py  train.sh
examples/multi_classification/: 1_async_api.py  1_sglang_infer.py  2_export_csv.py  build_data.py  llm_parsed_results.csv  predict.py  settings.py  train.py  train.sh  train_first_50.csv
prompt/: data.md  parser.md
src/llm2bert/: __init__.py
src/llm2bert/bert_finetune/: arguments.py  data.py  model.py  trainer.py
src/llm2bert/llm_api/: __init__.py  api_with_cache.py  parser.py  prompt_builder.py
src/llm_api/: prompt_builder.py
