[project]
name = "llm2bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.4",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "tenacity>=9.1.4",
    "torch==2.9.1",
    "transformers",
    "sgl-deep-gemm==0.1.3",
    "openai>=2.6.1",
    "sglang-kernel>=0.4.4",
    "sglang>=0.5.9",
]

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pip>=25.2",
    "python-dotenv>=1.2.1",
    "tensorboard>=2.20.0",
]

